--- a/site/index.html
+++ b/site/index.html
@@ -34,6 +34,7 @@
     <label><input type="checkbox" class="route-checkbox" value="36"> Route 36</label>
     <label><input type="checkbox" class="route-checkbox" value="10"> Route 10</label>
     <label><input type="checkbox" class="route-checkbox" value="MFO"> Route MFO</label>
+    <input type="text" id="stop-name-input" placeholder="Enter stop name...">
 
     <script src="https://unpkg.com/leaflet@1.8.0/dist/leaflet.js" integrity="sha512-BB3hKbKWOc9Ez/TAwyWxNXeoV9c1v6FIeYiBieIWkpLjauysF18NzgR1MBNBXf8/KABdlkX68nAhlwcDFLGPCQ==" crossorigin=""></script>
     <script src="js/main.js" type="module"></script>
