--- a/site/index.html
+++ b/site/index.html
@@ -36,6 +36,8 @@
     <label><input type="checkbox" class="route-checkbox" value="MFO"> Route MFO</label>
     <input type="text" id="stop-name-input" placeholder="Enter stop name...">
 
+    <ul id="stop-list"></ul>
+
     <script src="https://unpkg.com/leaflet@1.8.0/dist/leaflet.js" integrity="sha512-BB3hKbKWOc9Ez/TAwyWxNXeoV9c1v6FIeYiBieIWkpLjauysF18NzgR1MBNBXf8/KABdlkX68nAhlwcDFLGPCQ==" crossorigin=""></script>
     <script src="js/main.js" type="module"></script>
   </body>
